manifest/objects/CPQU__CPQ_Configuration_Data__c.object
<CustomObject>
    <fields>
        <fullName>CPQU__CSV_Export_Date__c</fullName>
        <label>CSV Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Export_ID__c</fullName>
        <label>CSV Export ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Export_Org_ID__c</fullName>
        <label>CSV Export Org ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Import_Date__c</fullName>
        <label>CSV Import Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Line_Pricebook_Entry_is_Standard__c</fullName>
        <label>CSV Line Pricebook Entry is Standard</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Line_Sort_Order__c</fullName>
        <description>LPAD(TEXT(CPQU__CSV_Object_Order__c), 6, &apos;0&apos;) + &quot;.&quot; +</description>
        <formula>CPQU__CSV_Export_ID__c + &quot;.&quot; +  
LPAD(CPQU__CSV_Object_Order__c, 6, &apos;0&apos;) + &quot;.&quot; + 
TEXT(CPQU__CSV_Line_Type__c) + &quot;.&quot; +
LPAD(TEXT(CPQU__CSV_Line_Pricebook_Entry_is_Standard__c), 2, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSV Line Sort Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Line_Type__c</fullName>
        <label>CSV Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Columns</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Line__c</fullName>
        <label>CSV Line</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Name__c</fullName>
        <label>CSV Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Object_Name__c</fullName>
        <label>CSV Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__CSV_Object_Order__c</fullName>
        <label>CSV Object Order</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__Deploy_ID__c</fullName>
        <label>Deploy ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__Deployed_SF_ID__c</fullName>
        <label>Deployed SF ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__Exported_SF_ID__c</fullName>
        <label>Exported SF ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__Static_Import_Status__c</fullName>
        <formula>&quot;Imported&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Static Import Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exported</fullName>
                </value>
                <value>
                    <fullName>Imported</fullName>
                </value>
                <value>
                    <fullName>Deploying</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Deleting</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CPQ Configuration Data</label>
    <listViews>
        <fullName>CPQU__All</fullName>
        <columns>NAME</columns>
        <columns>CPQU__Status__c</columns>
        <columns>CPQU__CSV_Line_Sort_Order__c</columns>
        <columns>CPQU__CSV_Export_Date__c</columns>
        <columns>CPQU__CSV_Export_ID__c</columns>
        <columns>CPQU__CSV_Export_Org_ID__c</columns>
        <columns>CPQU__CSV_Import_Date__c</columns>
        <columns>CPQU__CSV_Line__c</columns>
        <columns>CPQU__CSV_Line_Type__c</columns>
        <columns>CPQU__CSV_Name__c</columns>
        <columns>CPQU__CSV_Object_Name__c</columns>
        <columns>CPQU__CSV_Object_Order__c</columns>
        <columns>CPQU__Deployed_SF_ID__c</columns>
        <columns>CPQU__Deploy_ID__c</columns>
        <columns>CPQU__Exported_SF_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CPQU__All_Deployed</fullName>
        <columns>NAME</columns>
        <columns>CPQU__Status__c</columns>
        <columns>CPQU__CSV_Export_Date__c</columns>
        <columns>CPQU__CSV_Export_ID__c</columns>
        <columns>CPQU__CSV_Export_Org_ID__c</columns>
        <columns>CPQU__CSV_Import_Date__c</columns>
        <columns>CPQU__CSV_Line__c</columns>
        <columns>CPQU__CSV_Line_Sort_Order__c</columns>
        <columns>CPQU__CSV_Line_Type__c</columns>
        <columns>CPQU__CSV_Name__c</columns>
        <columns>CPQU__CSV_Object_Name__c</columns>
        <columns>CPQU__CSV_Object_Order__c</columns>
        <columns>CPQU__Deployed_SF_ID__c</columns>
        <columns>CPQU__Deploy_ID__c</columns>
        <columns>CPQU__Exported_SF_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CPQU__Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <label>All (Deployed)</label>
    </listViews>
    <listViews>
        <fullName>CPQU__All_Deployed_Blank_SFID</fullName>
        <columns>NAME</columns>
        <columns>CPQU__Status__c</columns>
        <columns>CPQU__CSV_Export_Date__c</columns>
        <columns>CPQU__CSV_Export_ID__c</columns>
        <columns>CPQU__CSV_Export_Org_ID__c</columns>
        <columns>CPQU__CSV_Import_Date__c</columns>
        <columns>CPQU__CSV_Line__c</columns>
        <columns>CPQU__CSV_Line_Sort_Order__c</columns>
        <columns>CPQU__CSV_Line_Type__c</columns>
        <columns>CPQU__CSV_Name__c</columns>
        <columns>CPQU__CSV_Object_Name__c</columns>
        <columns>CPQU__CSV_Object_Order__c</columns>
        <columns>CPQU__Deployed_SF_ID__c</columns>
        <columns>CPQU__Deploy_ID__c</columns>
        <columns>CPQU__Exported_SF_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CPQU__Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>CPQU__Deployed_SF_ID__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CPQU__CSV_Line_Type__c</field>
            <operation>notEqual</operation>
            <value>Columns</value>
        </filters>
        <label>All (Deployed) (Blank SFID)</label>
    </listViews>
    <listViews>
        <fullName>CPQU__All_Deploying</fullName>
        <columns>NAME</columns>
        <columns>CPQU__Status__c</columns>
        <columns>CPQU__CSV_Export_Date__c</columns>
        <columns>CPQU__CSV_Export_ID__c</columns>
        <columns>CPQU__CSV_Export_Org_ID__c</columns>
        <columns>CPQU__CSV_Import_Date__c</columns>
        <columns>CPQU__CSV_Line__c</columns>
        <columns>CPQU__CSV_Line_Sort_Order__c</columns>
        <columns>CPQU__CSV_Line_Type__c</columns>
        <columns>CPQU__CSV_Name__c</columns>
        <columns>CPQU__CSV_Object_Name__c</columns>
        <columns>CPQU__CSV_Object_Order__c</columns>
        <columns>CPQU__Deployed_SF_ID__c</columns>
        <columns>CPQU__Deploy_ID__c</columns>
        <columns>CPQU__Exported_SF_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CPQU__Status__c</field>
            <operation>equals</operation>
            <value>Deploying</value>
        </filters>
        <label>All (Deploying)</label>
    </listViews>
    <listViews>
        <fullName>CPQU__All_Exported</fullName>
        <columns>NAME</columns>
        <columns>CPQU__Status__c</columns>
        <columns>CPQU__CSV_Line_Sort_Order__c</columns>
        <columns>CPQU__CSV_Export_Date__c</columns>
        <columns>CPQU__CSV_Export_ID__c</columns>
        <columns>CPQU__CSV_Export_Org_ID__c</columns>
        <columns>CPQU__CSV_Import_Date__c</columns>
        <columns>CPQU__CSV_Line__c</columns>
        <columns>CPQU__CSV_Line_Type__c</columns>
        <columns>CPQU__CSV_Name__c</columns>
        <columns>CPQU__CSV_Object_Name__c</columns>
        <columns>CPQU__CSV_Object_Order__c</columns>
        <columns>CPQU__Deployed_SF_ID__c</columns>
        <columns>CPQU__Deploy_ID__c</columns>
        <columns>CPQU__Exported_SF_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CPQU__Status__c</field>
            <operation>equals</operation>
            <value>Exported</value>
        </filters>
        <label>All (Exported)</label>
    </listViews>
    <listViews>
        <fullName>CPQU__All_Imported</fullName>
        <columns>NAME</columns>
        <columns>CPQU__Status__c</columns>
        <columns>CPQU__CSV_Export_ID__c</columns>
        <columns>CPQU__CSV_Export_Org_ID__c</columns>
        <columns>CPQU__CSV_Import_Date__c</columns>
        <columns>CPQU__CSV_Line__c</columns>
        <columns>CPQU__CSV_Line_Sort_Order__c</columns>
        <columns>CPQU__CSV_Line_Type__c</columns>
        <columns>CPQU__CSV_Name__c</columns>
        <columns>CPQU__CSV_Object_Name__c</columns>
        <columns>CPQU__CSV_Object_Order__c</columns>
        <columns>CPQU__Deployed_SF_ID__c</columns>
        <columns>CPQU__Deploy_ID__c</columns>
        <columns>CPQU__Exported_SF_ID__c</columns>
        <columns>CPQU__CSV_Line_Pricebook_Entry_is_Standard__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CPQU__Status__c</field>
            <operation>equals</operation>
            <value>Imported</value>
        </filters>
        <label>All (Imported)</label>
    </listViews>
    <nameField>
        <displayFormat>CPQConf-{0000000}</displayFormat>
        <label>CPQ Configuration Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Configuration Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>